update the manifest for cloudfoundary push
Signed-off-by: Liam Hampton <liam.hampton@ibm.com>

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,3 +3,5 @@ applications:
 - name: Twitter-Joke-Bot
   random-route: true
   memory: 128M
+  env:
+    GO_INSTALL_PACKAGE_SPEC: github.com/IBMDeveloperUK/twitter-bot/cmd
